frontend/tests/snapshots/snapshot_serialization_tests__given_run_node.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000037",
  "name": "Run Code",
  "category": "durable",
  "icon": "play",
  "x": 110.0,
  "y": 120.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "run",
  "description": "Run arbitrary code",
  "config": {
    "code": "return input;",
    "durable_step_name": "transform-step",
    "mapping": {
      "input": "$.body"
    },
    "type": "run"
  }
}
