frontend/tests/snapshots/snapshot_serialization_tests__given_set_state_node.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-00000000003e",
  "name": "Set State",
  "category": "state",
  "icon": "save",
  "x": 250.0,
  "y": 260.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "set-state",
  "description": "Set state value",
  "config": {
    "key": "user-session",
    "type": "set-state",
    "value": "{\"active\":true}"
  }
}
