frontend/tests/snapshots/snapshot_serialization_tests__given_switch_node.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000041",
  "name": "Switch",
  "category": "flow",
  "icon": "git-merge",
  "x": 310.0,
  "y": 320.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "switch",
  "description": "Multi-way branch",
  "config": {
    "expression": "$.status",
    "type": "switch"
  }
}
