frontend/tests/snapshots/snapshot_serialization_tests__node_durable_promise.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000009",
  "name": "Await Confirmation",
  "category": "durable",
  "icon": "shield",
  "x": 700.0,
  "y": 200.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "durable-promise",
  "description": "Durable promise",
  "config": {
    "promise_name": "order-confirmed",
    "type": "durable-promise"
  }
}
